Added more stuffs to README. Cleaned up code